--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -8,10 +8,10 @@ on:
 
 env:
   REMOTE_REPOSITORY: qosmio/openwrt-ipq
-  REMOTE_BRANCH: qualcommax-6.x-nss-ath11k-2.12
-  CONFIG_FILE: ax3600.config
+  REMOTE_BRANCH: qualcommax-6.x-nss-wifi
+  CONFIG_FILE: ax9000.config
   CUSTOM_FILES_PATH: files/
-  RELEASE_PREFIX: qualcommax-6.x-nss-ath11k-2.12
+  RELEASE_PREFIX: qualcommax-6.x-nss-wifi
   NSS_PACKAGES_REPOSITORY: qosmio/nss-packages
   NSS_PACKAGES_REPOSITORY_BRANCH: NSS-12.5-K6.x
 
@@ -76,11 +76,6 @@ jobs:
 
       - name: Append CONFIG_RELR=y to target/linux/qualcommax/config-6.6
         run: echo "CONFIG_RELR=y" >> target/linux/qualcommax/config-6.6
-
-      - name: Include custom files
-        run: |
-          mkdir -p ${{ env.CUSTOM_FILES_PATH }}
-          mv custom_repo/${{ env.CUSTOM_FILES_PATH }}* ${{ env.CUSTOM_FILES_PATH }}
 
       - name: Download dependencies
         run: make download V=s -j$(nproc)
